Slides get overflow:hidden to prevent treading on eachother's toes

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -56,6 +56,7 @@ code, pre {
 
         .slide {
             position: absolute;
+            overflow: hidden;
             width: 100%;
             &.past {
                 left: -100%;
